# FetchBench

./: README.md
aes-attack/: README.md
aes-attack/lib/: mbedtls
aes-attack/program/: .gitignore  CMakeLists.txt  eval_outlog.py  generate_aligned_code.py  parse_states.py  plot_access_pattern.py  runscript.py  runscript_internal.sh
aes-attack/program/src/: LUTHypothesis.cc  LUTHypothesis.hh  attacker_automated.cc  cache_query.cc  cache_query.hh  common_test.cc  common_test.hh  cores.hh  fnf_calibrate.cc  key.hh  nops.hh  semaphores.hh  victim.cc
covert-channel/: README.md
covert-channel/kernel-modules/rpi4-module-cache/: Makefile  README.md  cache.c  cache.h  cache_ioctl.h  cache_structures.h  main.c  module_load.sh  module_unload.sh
covert-channel/kernel-modules/rpi4-module-cache/dummy/: Makefile  dummy.c
covert-channel/kernel-modules/rpi4-module-cache/user/: .gitignore  Makefile  ioctl.c
covert-channel/kernel-modules/rpi4-module-ccr/: .gitignore  README.md
covert-channel/kernel-modules/rpi4-module-ccr/armv7/: Makefile  ccr7.c  module_load.sh  module_unload.sh
covert-channel/kernel-modules/rpi4-module-ccr/armv7/testccr/: Makefile  testccr.c
covert-channel/kernel-modules/rpi4-module-ccr/armv8/: Makefile  ccr8.c  module_load.sh  module_unload.sh
covert-channel/kernel-modules/rpi4-module-ccr/armv8/testccr/: testccr.c
covert-channel/kernel-modules/smc-module/: .gitignore  Makefile  module_load.sh  module_unload.sh  smc_ioctl.h  smcmod.c
covert-channel/tfa-service/prefetch_induce_svc/: nop.h  prefetch_induce_svc.c  prefetch_induce_svc.h  secret.h
covert-channel/userspace-app/: CMakeLists.txt  rkpi4.cmake
covert-channel/userspace-app/src/: attacker.cc  attacker.hh  common_test.h  nops.h  secret.hh  smc_counter.cc  timersmc_counter.cc
fetchbench/: .gitignore  CMakeLists.txt  Doxyfile.in  EXTENDING.md  README.md  plot_parr.py  plot_pchase.py  plot_sms_stream.py  plot_stride.py  plot_stride_minmax.py  runner_parr.sh  runner_pchase.sh
fetchbench/src/: aligned_maccess.cc  aligned_maccess.hh  cacheutils.cc  cacheutils.hh  calibrate.cc  calibrate.hh  counter_thread.cc  counter_thread.hh  logger.hh  main.cc  mapping.cc  mapping.hh  testcase.hh  testcase_adjacent.hh  testcase_dcreplay.hh  testcase_dcreplay_dcexperiment.cc  testcase_dcreplay_dcexperiment.hh  testcase_parr.hh  testcase_pchase.hh  testcase_sms.hh  testcase_sms_smsexperiment.cc  testcase_sms_smsexperiment.hh  testcase_stream.hh  testcase_stream_streamexperiment.cc  testcase_stream_streamexperiment.hh  testcase_stride.hh  testcase_stride_strideexperiment.cc  testcase_stride_strideexperiment.hh  testcases.hh  utils.cc  utils.hh
fetchbench/src/parr/: parr.c  parr_arm.S  parr_x86.S
fetchbench/src/pchase/: pchase.c  pchase_arm.S  pchase_x86.S
